tests/errors/se_conddef.pyx
if x:
	def h():
		pass
_ERRORS = u"""
2:1: def statement not allowed here
"""
